--- a/VRChat/00/1285300.html
+++ b/VRChat/00/1285300.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "PqxqprfG6xOKt0oxxS96TQr/bgbzM2kEV7bdgF+Gx4s="></script>
+    "LbhH7cIwD43csihHkAeOpA9ekJi8hWrfncx6JAP/NJQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Raymarching 3DMap (VRChat/Unity)","description":"Unity2019まで動作確認してあります。Unityのバージョン更新によって動かなくなった場合にサポートはしかねます。対応した場合は告知します。\n\n---\n\nワールドの3Dマップを描画するためのシェーダとその機構です。  \n256*256のカメラ2つで、画像のような綺麗かつ軽量な3Dマップを描画できます。(プレイヤーの陰を表示する場合は追加で一つ)\nそれぞれ二枚目の画像では、高解像度な\nColor: 512 * 512\nDepth: 256 * 256\nMaxStep: 256\nという設定を使用しています。\n---\n使用した場合、READMEを読み全文に同意したものとみなします。\n----------\n\nA shader and its mechanism for drawing 3D maps of the world.\nYou can draw beautiful and lightweight 3D maps with a minimum of two 256 * 256 cameras. (If you want to show the player's shadow, you can add one camera additionaly)\n  \nEach second images, using high resolve settings:\nColor: 512 * 512\nDepth: 256 * 256\nMaxStep: 256\n\n---\nIf you use this, I consider you to read the README and agree to the full text.","url":"https://booth.pm/ja/items/1285300","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/17196f09-c9fe-4c94-8cb2-5b76e97ce982/i/1285300/79e0ab89-8637-4b0a-9f22-41496ca1653a_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PqxqprfG6xOKt0oxxS96TQr/bgbzM2kEV7bdgF+Gx4s="></script>
+    nonce="LbhH7cIwD43csihHkAeOpA9ekJi8hWrfncx6JAP/NJQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -603,9 +603,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
