--- a/VRChat/16/1285016.html
+++ b/VRChat/16/1285016.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "pQ6UNBM+MKvdzg7530pktdQCp8XqneyWMbuOm0n6H6c="></script>
+    "ukIKY3lp4PC6d7DCLRrdt0aM7NhZwoT6rBNYrveygus="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】セーラー風ベレー帽【アクセサリー】","description":"■　https://booth.pm/ja/items/1280086　の商品と合わせて作られたVRChat向けのセーラー風のベレー帽です。\nポリゴン数は三角面換算で400となっています。\n　\n※シェーダーは同梱されていません\n組み合わせたいアバターのシェーダーに合わせて下さい\n\n■入っている物\n・FBX\n・Texture4色\n・改変用PSD\n※gimpで作成したものなのでPhotoshopでの動作未確認です\n\n■使い方\n頭のボーンの子オブジェクトにして使ってください\n詳しいやり方は同梱テキストファイルをご覧ください。\n\n\n■禁則事項\n政治的利用\n特定の信条や宗教のための使用\n公序良俗に反する行為\n再配布（改造・未改造問わず）\n※アバターペデスタルへの使用も再配布にあたります\nその他製作者が不適切と判断したもの\n※上記の規約は予告なく変更する場合があります\n■やっていい事\n改変\nVRchatを使用した生放送の出演・撮影など\n※改変をした後のモデルも本規約に従ってください。\n\n※上記以外の使用については作者にお問い合わせください。\n\n連絡先：https://twitter.com/chemical_15_VR","url":"https://booth.pm/ja/items/1285016","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/9585a184-fff0-488e-8a9d-612c758951c2/i/1285016/9d12b29a-eaba-4094-8409-002e6503b3ff_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="pQ6UNBM+MKvdzg7530pktdQCp8XqneyWMbuOm0n6H6c="></script>
+    nonce="ukIKY3lp4PC6d7DCLRrdt0aM7NhZwoT6rBNYrveygus="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -402,9 +402,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
