--- a/VRChat/52/1284652.html
+++ b/VRChat/52/1284652.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "7bh7d7v8aLZbZ8GsPkhTiSUe7/0uDbOqemwmTQytcjw="></script>
+    "hYS0YP0xJw9b4+RuNjNQQiMxXOyTDRjmhYa1XsdKFZk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"（額縁）画伯作品「とある夏の思い出」","description":"画伯作品「とある夏の思い出」のご紹介\nVRC向け3D画伯作品「とある夏の思い出」です。\n画伯である私が小学生のころ家族で行った海水浴の思い出を絵にしました。\n部屋に飾って一つのアクセントにしてもよし、アバターに持たせて芸術を布教するもよし、使い方は無限大！\n絵だけをくり抜いて使ったり額縁だけお使いいただいてもかまいません…改変はご自由に。\nShaderはお好きなものをご自身で設定してください。\n\n\n【内容物】\n・gakubuti Art FBX\n・gakubuti Art unitypackage\n・gakubuti Art PNG（テクスチャ）\n\n【利用規約】\n・著作権は作者であるKanかんが保有しています。\n・改変はご自由にどうぞ。\n・本データの再配布、販売は改変の有無を問わず禁止とします。\n・商標利用は可能です。","url":"https://booth.pm/ja/items/1284652","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/6e8fc3f2-9b46-41cf-84e9-6e0e717b064e/i/1284652/3d016756-5f59-4c55-b420-cba16da3abed_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="7bh7d7v8aLZbZ8GsPkhTiSUe7/0uDbOqemwmTQytcjw="></script>
+    nonce="hYS0YP0xJw9b4+RuNjNQQiMxXOyTDRjmhYa1XsdKFZk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -397,9 +397,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
