--- a/VRChat/87/1284187.html
+++ b/VRChat/87/1284187.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Mk8uZM1SVFDmMYH7ZcBxcDo0782hjTOmC1fE4TALaDg="></script>
+    "3WQ3PRS3JE5hYPC2xBwTzO0bHZD7zvHpUG7YAZjMwW4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat向けアクセサリ ペアリング","description":"◆概要\n\n△775ポリゴン\n\nVRchat及びUnity向けのモデルです。\n\nシンプルなペアリングです。2種類のマテリアル設定済みリングが梱包されています。\n首輪、腕輪、指輪など自由に大きさをかえてご利用ください。\nUnityPackageファイルを使うだけですぐに利用できます。インポートしてモデルのくっつけたい階層に突っ込んでください。\n\nこちらの商品はペアリングですので、1回のみ贈呈・再配布が可能です。\n\n◆ファイル内容\n\nunitypackage\nblendファイル\nfbxファイル\nprefab - マテリアル設定済みのPrefabです。AとBがありますので、ペアでお使いください。\n\n◆シェーダーについて\n\n本モデルはsynqark様が提供するArktoon Shaders(v1.0.2.2)を使用しており、unitypackageに同梱済みです。\n既に導入済みの方はインポート時にチェックを外すか、既存のファイルを削除して導入して下さい。\n旧バーションを使っている場合、不具合が発生する可能性があるため新規プロジェクトにて導入を行うか、更新した上で導入してください。\n\nまた、宝石部分はCrystal Shaderを利用させていただきました。Crystal Shaderについてはそちらの利用規約に準じてご利用ください。\n\n◆利用規約\n\n本モデルの著作権はNekonohaに帰属します。\n本モデルは商用・配信等に利用することができます。\n特定個人や団体等、他人を不快にさせる用途・目的等での使用はご遠慮ください。\n本モデルの改変・改造は自由です。\n改変・改造の有無に関わらず、本モデルデータの再配布及び再販売を禁止します。（ただし、ペアで使用するための1回のみの贈呈・再配布は許諾します）。\n\n\n\n◆制作者\n\nネコノハヤシロ\n\n◆連絡先\n\nTwitter: @tan_fantazma\nDiscord: Nekonoha#9701","url":"https://booth.pm/ja/items/1284187","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/7db76cf7-7e72-4f84-ba1d-0ba63d5cdd5b/i/1284187/4e0f9328-a09d-4939-9eda-8064c76efa60_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Mk8uZM1SVFDmMYH7ZcBxcDo0782hjTOmC1fE4TALaDg="></script>
+    nonce="3WQ3PRS3JE5hYPC2xBwTzO0bHZD7zvHpUG7YAZjMwW4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -407,9 +407,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
